# versioner

./: .gitignore  README.md  commit-msg  cpp_test.cpp  haskell_test.cabal  install_versioner  post-commit  pre-commit  python_test.py  test.robot  uninstall-hooks  ver.py  versioner  versioner-has-msg.py  versioner-install  versioner-uninstall-hooks  versioner-update  versioner.py
