name:                test
version:             0.1.2.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/app#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
